fixed the form spacing

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,7 +21,7 @@ textarea {
   border: none;
 }
 
-.registration {
+.formSpacing {
   width: 60%;
 }
 
